fix: add overflow-y scroll to html for header position

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,5 +121,6 @@
   }
   html {
     scroll-behavior: smooth;
+    overflow-y: scroll;
   }
 }
